Adding classifier capability.